fix: Fix a bug causing improper data binding by JPA repo